--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "digicademy/chf_pub",
+    "version": "2.0.0",
     "type": "typo3-cms-extension",
     "description": "Create and manage blog and book data in TYPO3",
     "authors": [
@@ -33,8 +34,15 @@
     ],
     "require": {
         "typo3/cms-core": "^13",
+        "typo3/cms-extbase": "^13",
+        "typo3/cms-fluid": "^13",
         "typo3/cms-fluid-styled-content": "^13",
-        "digicademy/chf_base": "@dev"
+        "typo3/cms-rte-ckeditor": "^13",
+        "digicademy/chf_base": "^2"
+    },
+    "suggest": {
+        "digicademy/chf_bib": "Adds source relations",
+        "digicademy/chf_gloss": "Provides a glossary component"
     },
     "autoload": {
         "psr-4": {
