Rework TYPO3 14 deprecations

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "digicademy/chf_pub",
     "version": "2.0.0",
     "type": "typo3-cms-extension",
-    "description": "Create and manage blog and book data in TYPO3",
+    "description": "CHF Pub - Create and manage blog and book data in TYPO3",
     "authors": [
         {
             "name": "Jonatan Jalle Steller",
@@ -33,11 +33,11 @@
         "Academic"
     ],
     "require": {
-        "typo3/cms-core": "^13",
-        "typo3/cms-extbase": "^13",
-        "typo3/cms-fluid": "^13",
-        "typo3/cms-fluid-styled-content": "^13",
-        "typo3/cms-rte-ckeditor": "^13",
+        "typo3/cms-core": "^14",
+        "typo3/cms-extbase": "^14",
+        "typo3/cms-fluid": "^14",
+        "typo3/cms-fluid-styled-content": "^14",
+        "typo3/cms-rte-ckeditor": "^14",
         "digicademy/chf_base": "^2"
     },
     "suggest": {
